@@ -123,7 +123,7 @@ EXTERN int     pipecommon_close(FAR struct file *filep);
 EXTERN ssize_t pipecommon_read(FAR struct file *, FAR char *, size_t);
 EXTERN ssize_t pipecommon_write(FAR struct file *, FAR const char *, size_t);
 #ifndef CONFIG_DISABLE_POLL
-EXTERN int     pipecommon_poll(FAR struct file *filep, FAR struct pollfd *fds);
+EXTERN int     pipecommon_poll(FAR struct file *filep, FAR struct pollfd *fds, boolean setup);
 #endif
 
 #undef EXTERN
