@@ -571,4 +571,5 @@
 	  full buffer of read data before return.  This means that getc would stall when it needed
 	  to refill the input buffer. The old behavior (read full blocks) might be useful in other
 	  contexts, so it is still available within the driver as a configuration option.
+	* Implement poll() and select() support for TCP/IP sockets
 
